# homeassistant-magewell

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  hacs.json  info.md  pyproject.toml  requirements.test.txt  sonar-project.properties
.github/workflows/: dependabot-automerge.yml  release.yml  sonarcloud.yml  tests.yml
custom_components/magewell/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  quality_scale.yaml  select.py  sensor.py  strings.json
custom_components/magewell/translations/: en.json
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_diagnostics.py  test_init.py  test_select.py  test_sensor.py
