[project]
name = "homeassistant-magewell"
version = "1.1.0"
description = "Magewell Pro Convert custom component for Home Assistant"
requires-python = ">=3.12,<3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components"]
